force-app/main/default/objects/Part__c/fields/Current_Stock__c.field-meta.xml
<CustomField>
    <fullName>Current_Stock__c</fullName>
    <label>Current Stock</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
</CustomField>