force-app/main/default/objects/Part__c/fields/Reorder_Level__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Level__c</fullName>
    <label>Reorder Level</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
</CustomField>