force-app/main/default/objects/Part__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse / Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>